# KTodo

./: CMakeLists.txt  README.md  kleftwidget.cpp  kleftwidget.h  kstdafx.cpp  kstdafx.h  ktodowidget.cpp  ktodowidget.h  kviewer.cpp  kviewer.h  main.cpp  mainwindow  mainwindow.cpp  mainwindow.h
data/: kdatamgr.cpp  kdatamgr.h
shell/: kclassitem.cpp  kclassitem.h
shell/model/: ktodolistmodel.cpp  ktodolistmodel.h
